<resources>
    <string name="app_name">MineSwipper</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="field_size">Field Size</string>
    <string name="number_mines">Number of mines</string>
    <string name="About">Course Work Polyakov Kirill \n gr.23501/1</string>
    <string name="back_description" >Serenity from Windows XP</string>
    <string name="makeUgly">Autorotate</string>
</resources>
