<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context="com.example.kirill.coursework.MainActivity"
    android:measureAllChildren="false"><![CDATA[>

    ]]>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/back"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:src="@drawable/panel"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:measureWithLargestChild="false"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:id="@+id/linearLayout"
        android:layout_margin="15dp">

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onSettingsClick"
            android:textColor="@android:color/white"
            android:background="@drawable/button_left"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/settings"
            android:layout_alignStart="@+id/settings"
            android:layout_alignRight="@+id/settings"
            android:layout_alignEnd="@+id/settings"
            android:layout_marginLeft="-20dp"
            android:layout_marginRight="-20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/settings"
                android:id="@+id/setting_text"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onAboutClick"
            android:background="@drawable/button_right"
            android:textColor="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <ImageButton
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onStartClick"
            android:textColor="@android:color/white"
            android:background="@drawable/button_mid"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/about"
            android:layout_alignStart="@+id/about"
            android:layout_marginLeft="-20dp"
            android:layout_alignRight="@+id/about"
            android:layout_alignEnd="@+id/about"
            android:layout_marginRight="-20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/about"
                android:id="@+id/About"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/start"
            android:layout_alignStart="@+id/start"
            android:layout_alignRight="@+id/start"
            android:layout_alignEnd="@+id/start"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-10dp"
            android:layout_marginRight="-10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/start"
                android:id="@+id/start_text"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
